--- a/Films/templates/Films/base.html
+++ b/Films/templates/Films/base.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 {% load bootstrap3 %}
-{% load static %}
+
+{% bootstrap_css %}
+{% bootstrap_javascript %}
+
+{% bootstrap_javascript %}
+
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
